--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -810,6 +810,7 @@ ar:
           pl: 
           ru: 
           tr: 
+        legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
         category_headline: أو البحث عن طريق التصنيف
