--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -878,6 +878,7 @@ fa:
           pl: 
           ru: 
           tr: 
+        legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
         category_headline: یا بدنبال طبقه بندی ها
