--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -894,6 +894,7 @@ fr:
           pl: 
           ru: 
           tr: 
+        legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
         category_headline: ou recherches par catégories
