--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -936,6 +936,7 @@ pl:
           pl: 
           ru: 
           tr: 
+        legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
         category_headline: Lub szukaj w kategoriach
