--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -926,6 +926,7 @@ ru:
           pl: 
           ru: 
           tr: 
+        legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
         category_headline: Или поиск по категориям
