--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -816,6 +816,7 @@ tr:
           pl: 
           ru: 
           tr: 
+        legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
         category_headline: Kategoriler arasında ara
