--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1295,6 +1295,7 @@ de:
           pl: 
           ru: 
           tr: 
+        legal_title: 
         title: 
       navigation:
         category_headline: Oder suche nach Kategorien
