--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -847,6 +847,8 @@ fr:
         zza: 'Zazaki - Zazaki / Kırmancki
 
 '
+    shariff:
+      share_label: 
     single_search_result:
       encounters:
         chat: discussion en ligne
@@ -894,6 +896,7 @@ fr:
           pl: 
           ru: 
           tr: 
+        legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
         category_headline: ou recherches par catégories
