--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -889,6 +889,8 @@ pl:
         wol: Język wolof - wɔlɔf
         zho: Język chiński - 普通话 / 普通話
         zza: Język zazaki - Zazaki / Kırmancki
+    shariff:
+      share_label: 
     single_search_result:
       encounters:
         chat: chat
@@ -936,6 +938,7 @@ pl:
           pl: 
           ru: 
           tr: 
+        legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
         category_headline: Lub szukaj w kategoriach
