--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -874,6 +874,8 @@ ru:
         wol: Волоф язык - wɔlɔf
         zho: Китайский язык - 普通话 / 普通話
         zza: Зазаки - Zazaki / Kırmancki
+    shariff:
+      share_label: 
     single_search_result:
       encounters:
         chat: Чат
@@ -926,6 +928,7 @@ ru:
           pl: 
           ru: 
           tr: 
+        legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
         category_headline: Или поиск по категориям
