--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -557,6 +557,7 @@ ar:
     cookie_warning_html: الكوكيز تساعدنا على أن تظل صفحتنا متاحة. من خلال استخدامك للصفحة فأنت تبين تفهمك لأننا وضعنا كوكيز. <a href="/refugees/datenschutzhinweise">Mehr</a>
     geolocation:
       error: لم يتم العثور على موقع، من فضلك أدخل اسم الموقع ذاتيا.
+      fallback_clarification: 
       get: استخدم موقعي !
       waiting: البحث عن موقع. ربما عليك أن تسمح بهذا أولا
     lang_list_toggle:
@@ -874,17 +875,18 @@ ar:
             boys_only: فقط للصبيان والرجال
             girls_only: فقط للبنات والسيدات
           target_audience:
-            acquaintances: للمعارف والأقارب
             children: للأطفال والشباب
-            family_acquaintances: من أجل المعارف والأقارب
+            family_acquaintances: 
             family_children: للأطفال والشبان
             family_nuclear_family: للأسر
             family_parents: للآباء
             family_parents_to_be: لمن سوف يصيرون والدين
             family_pregnant_woman: للحوامل
+            family_relatives: من أجل المعارف والأقارب
             nuclear_family: للأسر
             parents: للآباء
             pregnant_woman: للحوامل
+            relatives: للمعارف والأقارب
       map_sidebar:
         map_output_searchresults: إظهار بطاقة نتائج البحث
       noscript_warning: |
