--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -699,7 +699,12 @@ pl:
       <a href="/pl/refugees/ochrona-danych">więcej</a>.
     geolocation:
       error: Lokalizacja nie mogła zostać odnaleziona. Prosimy wprowadzić ją ręcznie.
-      fallback_clarification: Alexanderplatz w Berlinie nie jest w twojej okolicy? Podaj mi proszę twój adres, kod pocztowy lub dzielnice.
+      fallback: 
+      fallback_clarification:
+        code1: 
+        code2: 
+        code3: 
+        code4: 
       get: Użyj mojej lokalizacji!
       waiting: Szukam lokalizacji... Prawdopodobnie musisz najpierw wyrazić zgodę.
     lang_list_toggle:
@@ -997,6 +1002,7 @@ pl:
             girls_only: tylko dla dziewcząt i kobiet
           target_audience:
             children: dla dzieci i młodzieży
+            family_acquaintances: 
             family_children: dla dzieci i młodzieży
             family_nuclear_family: dla rodzin
             family_parents: dla rodziców
