--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -557,7 +557,12 @@ ar:
     cookie_warning_html: الكوكيز تساعدنا على أن تظل صفحتنا متاحة. من خلال استخدامك للصفحة فأنت تبين تفهمك لأننا وضعنا كوكيز. <a href="/refugees/datenschutzhinweise">Mehr</a>
     geolocation:
       error: لم يتم العثور على موقع، من فضلك أدخل اسم الموقع ذاتيا.
-      fallback_clarification: 
+      fallback: 
+      fallback_clarification:
+        code1: 
+        code2: 
+        code3: 
+        code4: 
       get: استخدم موقعي !
       waiting: البحث عن موقع. ربما عليك أن تسمح بهذا أولا
     lang_list_toggle:
@@ -876,6 +881,7 @@ ar:
             girls_only: فقط للبنات والسيدات
           target_audience:
             children: للأطفال والشباب
+            family_acquaintances: 
             family_children: للأطفال والشبان
             family_nuclear_family: للأسر
             family_parents: للآباء
