--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -651,7 +651,12 @@ fr:
       <a href="/fr/refugees/protection-des-données">Plus</a>.
     geolocation:
       error: La localisation n'a pas été trouvée. Donnez-là manuellement , s'il vous plaît.
-      fallback_clarification: 
+      fallback: 
+      fallback_clarification:
+        code1: 
+        code2: 
+        code3: 
+        code4: 
       get: J'utlise ma localisation!
       waiting: Recherche localisation...... éventuellement, tu dois en premier lieu l'autoriser.
     lang_list_toggle:
@@ -951,6 +956,7 @@ fr:
             girls_only: seulement pour les filles et les femmes
           target_audience:
             children: pour les enfants et les ados
+            family_acquaintances: 
             family_children: pour les enfants et les ados
             family_nuclear_family: pour les familles
             family_parents: pour les parents
