--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -678,7 +678,12 @@ ru:
       <a href="/ru/refugees/Правила-конфиденциальности">Далее</a>.
     geolocation:
       error: Местонахождение не найдено. Пожалуйста введи сам.
-      fallback_clarification: 
+      fallback: 
+      fallback_clarification:
+        code1: 
+        code2: 
+        code3: 
+        code4: 
       get: Использовать мое местонахождения!
       waiting: Искать местонахождения... Возможно тебе нужно сначала это разрешить.
     lang_list_toggle:
@@ -989,6 +994,7 @@ ru:
             girls_only: только для девочек и женщин
           target_audience:
             children: для детей и молодежи
+            family_acquaintances: 
             family_children: для детей и молодежи
             family_nuclear_family: для семей
             family_parents: для родителей
