--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -578,7 +578,12 @@ tr:
       <a href="/tr/refugees/Gizlilik-Politikası">daha fazla</a>.
     geolocation:
       error: konumun bulunamamıştır. Lütfen manüel giriş yap.
-      fallback_clarification: 
+      fallback: 
+      fallback_clarification:
+        code1: 
+        code2: 
+        code3: 
+        code4: 
       get: Konumumu kullan!
       waiting: Konumumu ara... Konumunun kullanılmasına izin vermelisin.
     lang_list_toggle:
@@ -879,6 +884,7 @@ tr:
             girls_only: Yalnızca bayanlar için
           target_audience:
             children: Çocuklar ve gençler için
+            family_acquaintances: 
             family_children: Çocuk ve gençler için
             family_nuclear_family: Aileler için
             family_parents: Ebeveynler için
