--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -654,6 +654,11 @@ ru:
         wol: Wol
         zho: Zho
         zza: Zza
+        aar: Aar
+        ckb: Ckb
+        cus: Cus
+        msa: Msa
+        tig: Tig
       section:
         family: Family
         refugees: Refugees
@@ -878,6 +883,11 @@ ru:
         wol: Волоф язык - wɔlɔf
         zho: Китайский язык - 普通话 / 普通話
         zza: Зазаки - Zazaki / Kırmancki
+        aar: 'Афарский - Qafar-áf '
+        ckb: 'Сорани́ - سۆرانی '
+        cus: Сaxo - ሳሆኛ
+        msa: Мала́йский язы́к – بهاس ملايو
+        tig: Тигре - ትግሬ
     shariff:
       share_label: Разделить
     single_search_result:
