--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -383,6 +383,8 @@ en:
         name_placeholder: Name (obligatory)
         send: Send
         send_us_a_message: Write us a message
+    success:
+      success: 
   emails:
     offers_index:
       family:
@@ -597,6 +599,11 @@ en:
         wol: Wol
         zho: Zho
         zza: Zza
+        aar: Aar
+        ckb: Ckb
+        cus: Cus
+        msa: Msa
+        tig: Tig
       section:
         family: Family
         refugees: Refugees
@@ -816,6 +823,11 @@ en:
         wol: Wolof - wɔlɔf
         zho: Chinese - 普通话 / 普通話
         zza: Zaza - Zazaki / Kırmancki
+        aar: 'Afar - Qafar-áf '
+        ckb: 'Sorani - سۆرانی '
+        cus: Saho - ሳሆኛ
+        msa: Malay – بهاس ملايو
+        tig: Tigre - ትግሬ
     shariff:
       share_label: Share
     single_search_result:
