--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -416,6 +416,8 @@ fr:
         name_placeholder: Nom (obligatoire)
         send: Envoyer
         send_us_a_message: Écris-nous un message
+    success:
+      success: 
   emails:
     offers_index:
       family:
@@ -630,6 +632,11 @@ fr:
         wol: Wol
         zho: Zho
         zza: Zza
+        aar: Aar
+        ckb: Ckb
+        cus: Cus
+        msa: Msa
+        tig: Tig
       section:
         family: Family
         refugees: Refugees
@@ -851,6 +858,11 @@ fr:
         zza: 'Zazaki - Zazaki / Kırmancki
 
 '
+        aar: 'L''afar - Qafar-áf '
+        ckb: 'Sorani - سۆرانی '
+        cus: Saho - ሳሆኛ
+        msa: Malais – بهاس ملايو
+        tig: Tigré - ትግሬ
     shariff:
       share_label: Partager
     single_search_result:
